--- a/index.html
+++ b/index.html
@@ -2,11 +2,11 @@
         <html>
            <head>
               <title>OSM and Leaflet</title>
-              <link rel = "stylesheet" href = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
+              <link rel = "stylesheet" href = "https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.css"/>
            </head>
 <body>
               <div id = "map" style = "width: 900px; height: 580px"></div>
-<script src = "http://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
+<script src = "https://cdn.leafletjs.com/leaflet-0.7.3/leaflet.js"></script>
               <script>
                  // Creating map options
                  var mapOptions = {
