--- a/Mājaslapa/portfolio-html-site-master/index.html
+++ b/Mājaslapa/portfolio-html-site-master/index.html
@@ -28,6 +28,10 @@
 		<div class="nav-link-wrapper">
           <a href="about.html">Iestatījumi</a>
         </div>
+		
+		<div class="nav-link-wrapper">
+          <a href="about.html">Palīdzība</a>
+        </div>
       </div>
 
       <div class="right-side">
@@ -40,8 +44,8 @@
 	<div class = "container">
 		<div class="content-wrapper">
 			<div class="portfolio-item-wrapper">
-				<div class="portfolio-img-background" style="background-image:url(images/portfolio1.jpg)"></div>
-				<div class="img-text-wrapper">
+				<div class="portfolio-img-background1" style="background-image:url(images/portfolio1.jpg)"></div>
+				<div class="img-text-wrapper2">
 				<div class="logo-wrapper1">
 				<img src="images/logos/quip.png" alt="">
 				</div>
@@ -63,7 +67,7 @@
 
           <div class="img-text-wrapper">
             <div class="logo-wrapper">
-              <img src="images/logos/quip.png" alt="">
+              <img src="images/logos/maja.png" alt="">
             </div>
 			<div class="subtitle">Meklēt pēc adreses</div>
 			
@@ -81,7 +85,7 @@
           <div class="portfolio-img-background" style="background-image:url(images/portfolio2.jpg)"></div>
           <div class="img-text-wrapper">
             <div class="logo-wrapper">
-              <img src="images/logos/devcamp.png" alt="">
+              <img src="images/logos/arhitekts.png" alt="">
             </div>
 
             <div class="subtitle">Meklēt pēc arhitekta</div>
@@ -94,10 +98,10 @@
         </div>
 
         <div class="portfolio-item-wrapper">
-          <div class="portfolio-img-background" style="background-image:url(images/portfolio3.jpg)"></div>
+          <div class="portfolio-img-background" style="background-image:url(images/portfolio4.jpg)"></div>
           <div class="img-text-wrapper">
             <div class="logo-wrapper">
-              <img src="images/logos/eventbrite.png" alt="">
+              <img src="images/logos/karte.png" alt="">
             </div>
 
             <div class="subtitle">Meklēt kartē</div>
@@ -109,7 +113,14 @@
           </div>
         </div>
 	</div>
-
+	<div class = "container">
+		<div class="content-wrapper">
+			<div class="portfolio-item-wrapper">
+				<div class="portfolio-img-background_last" style="background-image:url(images/rights.jpeg)"></div>
+				
+			</div>
+		</div>
+    </div>
 </body>
 
 <script>
